notes it frameworks and regulations

--- a/content/post/2024-12-23.md
+++ b/content/post/2024-12-23.md
@@ -1,6 +1,6 @@
 ---
 author: bhaskar
-title: Enhancing Vigilance and Zero-Trust Security in AI Systems
+title: Enhancing Vigilance and Zero-Trust Security
 date: 2024-12-23
 description:
 tags:
