improve text in codecompliance

--- a/content/post/2024-12-24.md
+++ b/content/post/2024-12-24.md
@@ -48,8 +48,7 @@ explores the strong knowledge of IT governance frameworks, compliance, and best
 practices, focusing on key frameworks such as ITIL, GDPR, DPDPA, and ISO 27001,
 along with their objectives and focus areas.
 
-
-## IT Frameworks 
+## IT Frameworks
 
 #### ITIL (Information Technology Infrastructure Library)
 
@@ -79,7 +78,6 @@ along with their objectives and focus areas.
 - **Continual Service Improvement:** Focuses on aligning and realigning IT
   services to changing business needs.
 
-
 #### ISO 27001 (Information Security Management System)
 
 **Objectives:**
@@ -103,9 +101,9 @@ along with their objectives and focus areas.
   its effectiveness.
 - **Incident Management:** Establishes procedures for managing and responding to
   security incidents.
-  
- ## Privacy  Regulations
- 
+
+## Privacy Regulations
+
 #### GDPR (General Data Protection Regulation)
 
 **Objectives:**
@@ -184,24 +182,19 @@ along with their objectives and focus areas.
 - **Enforcement:** The California Attorney General is responsible for enforcing
   the CCPA, and businesses can face significant fines for non-compliance.
 
-
-
-#### Core requirements 
+#### Core requirements
 
 Here's a comparative table of GDPR, India's DPDPA, and CCPA:
 
-| Aspect | GDPR | India DPDPA | CCPA |
-|--------|------|-------------|------|
-| Jurisdiction | EU/EEA | India | California, USA |
-| Scope | Any organization processing EU residents' data | Indian organizations & foreign entities processing Indian citizens' data | For-profit businesses in California meeting specific thresholds |
-| Key Rights | - Right to access<br>- Right to rectification<br>- Right to erasure<br>- Right to data portability<br>- Right to object | - Right to access<br>- Right to correction<br>- Right to erasure<br>- Right to grievance redressal<br>- Right to nominate | - Right to know<br>- Right to delete<br>- Right to opt-out<br>- Right to non-discrimination |
-| Data Breach Notification | Within 72 hours | Within 72 hours | "Without unreasonable delay" |
-| Consent Requirements | Explicit, specific consent required | Explicit consent required | Opt-out model |
-| Data Protection Officer | Mandatory for certain organizations | Mandatory for significant data fiduciaries | Not mandatory |
-| Cross-border Data Transfer | Restricted with adequacy requirements | Restricted with specific conditions | No specific restrictions |
-
-
-
+| Aspect                     | GDPR                                                                                                                    | India DPDPA                                                                                                               | CCPA                                                                                        |
+| -------------------------- | ----------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------- |
+| Jurisdiction               | EU/EEA                                                                                                                  | India                                                                                                                     | California, USA                                                                             |
+| Scope                      | Any organization processing EU residents' data                                                                          | Indian organizations & foreign entities processing Indian citizens' data                                                  | For-profit businesses in California meeting specific thresholds                             |
+| Key Rights                 | - Right to access<br>- Right to rectification<br>- Right to erasure<br>- Right to data portability<br>- Right to object | - Right to access<br>- Right to correction<br>- Right to erasure<br>- Right to grievance redressal<br>- Right to nominate | - Right to know<br>- Right to delete<br>- Right to opt-out<br>- Right to non-discrimination |
+| Data Breach Notification   | Within 72 hours                                                                                                         | Within 72 hours                                                                                                           | "Without unreasonable delay"                                                                |
+| Consent Requirements       | Explicit, specific consent required                                                                                     | Explicit consent required                                                                                                 | Opt-out model                                                                               |
+| Data Protection Officer    | Mandatory for certain organizations                                                                                     | Mandatory for significant data fiduciaries                                                                                | Not mandatory                                                                               |
+| Cross-border Data Transfer | Restricted with adequacy requirements                                                                                   | Restricted with specific conditions                                                                                       | No specific restrictions                                                                    |
 
 #### Best Practices in IT Governance
 
@@ -216,7 +209,9 @@ Here's a comparative table of GDPR, India's DPDPA, and CCPA:
 5. **Continuous Improvement:** Regularly review and improve IT governance
    frameworks and practices to adapt to changing business and technological
    landscapes.
-6. Ensure necessary basic blocks privacy policy,maintain record of personal data with user constent,train the staff,appoint someone for responsible for data protection. 
+6. Ensure necessary basic blocks privacy policy,maintain record of personal data
+   with user consent,train the staff,appoint someone for responsible for data
+   protection.
 
 In conclusion, a strong knowledge of IT governance frameworks, compliance, and
 best practices is essential for organizations to effectively manage their IT
