include code snippet

--- a/content/post/2024-12-25.md
+++ b/content/post/2024-12-25.md
@@ -1,6 +1,6 @@
 ---
 author: bhaskar
-title: Introduction Apache Iceberg
+title: Diving into Apache Iceberg My First-Hand Experience
 date: 2024-12-24
 description:
 tags:
@@ -8,48 +8,55 @@ categories:
   - Apache Iceberg
 ---
 
-Apache Iceberg is a modern table format for large analytic datasets. Here are
-its key features and characteristics:
+Apache Iceberg is a modern table format for large analytic datasets.
 
-Core Features:
+Today, I've been experimenting with Apache Iceberg, and I'm genuinely excited
+about what I'm discovering. Ever wondered why tech giants like Netflix and
+ByteDance are going all-in on this technology?
 
-- Schema evolution with full backward compatibility
-- Hidden partitioning (users don't need to specify partition columns in queries)
-- Time travel and snapshot isolation
-- ACID transaction guarantees
-- Support for optimistic concurrency control
-- Format-preserving encryption support
+Schema evolution that actually makes sense Hidden partitioning that feels like
+magic ACID transactions that simply deliver Branch.io's success story validates
+my experiments - they saw 20x faster queries and 40% cost reduction after
+implementation.
 
-Key Benefits:
+🤓 Currently testing it with Spark integration, and I must say, the developer
+experience is surprisingly smooth.
 
-- Efficient handling of large-scale data
-- Better performance through metadata management
-- Reliable version control for data
-- Seamless integration with popular tools like:
-  - Apache Spark
-  - Apache Flink
-  - Apache Hive
-  - Presto/Trino
-  - Dremio
+Example
 
-Technical Aspects:
+```
+# Create table with evolving schema and partitioning
+spark.sql("""
+CREATE TABLE customer_events (
+    event_id BIGINT,
+    customer_id BIGINT,
+    event_timestamp TIMESTAMP,
+    event_type STRING
+) USING iceberg
+PARTITIONED BY (days(event_timestamp), bucket(16, customer_id))
+""")
 
-- Uses a table format based on JSON metadata files
-- Maintains manifest files for tracking data files
-- Supports multiple file formats:
-  - Parquet
-  - ORC
-  - Avro
+# Add new columns over time
+spark.sql("ALTER TABLE customer_events ADD COLUMN device_type STRING")
 
-Use Cases:
+# Concurrent operations with ACID guarantees
+def process_events(date_partition):
+    spark.sql(f"""
+    MERGE INTO customer_events t
+    USING daily_events s
+    ON t.event_id = s.event_id
+    WHEN MATCHED THEN UPDATE SET *
+    WHEN NOT MATCHED THEN INSERT *
+    WHERE s.event_timestamp >= '{date_partition}'
+    """)
 
-- Data lakes
-- Large-scale analytics
-- Streaming data processing
-- Multi-table, multi-user data warehouses
-
-Iceberg addresses many limitations of traditional Hive-style partitioning and
-provides a more robust foundation for modern data lake architectures.
+# Query with time travel
+spark.sql("""
+SELECT *
+FROM customer_events VERSION AS OF 12345
+WHERE event_timestamp > current_date() - INTERVAL 7 DAYS
+""")
+```
 
 ## Quick start
 
